tests/expectations/parser/program/locator_expression_fail.out
Error [EPAR0370005]: expected an identifier, '(', '[', 'address, 'bool', 'field', 'group', 'scalar', 'signature', a string, 'i8', 'i16', 'i32', 'i64', 'i128', 'u8', 'u16', 'u32', 'u64', 'u128' -- found 'mapping'
    --> test:6:16
     |
   6 |         let a: mapping = relay.aleo/users;
     |                ^^^^^^^
